
[TestDisplay/plain_error - 1]
Error: something went wrong

---

[TestDisplay/hazard_detected - 1]
Error: hazardous migration detected: migration 20250101_foo contains hazards:
  - DELETES_DATA: drops column

Hint: these operations can cause table locks, downtime, or irreversible data loss in production.
Review each hazard above before proceeding.
To explicitly allow specific types: --allow-hazards <TYPE>

---

[TestDisplay/wrapped_schema_drift - 1]
Error: apply failed: schema drift detected: expected hash abc, got xyz

Hint: the database schema was modified outside of migrations (manual DDL).
Run 'conduit diff' to generate a migration that captures the changes.
To skip this check: --skip-schema-drift-check

---

[TestDisplay/wrapped_hazard - 1]
Error: apply failed: hazardous migration detected: migration foo contains hazards

Hint: these operations can cause table locks, downtime, or irreversible data loss in production.
Review each hazard above before proceeding.
To explicitly allow specific types: --allow-hazards <TYPE>

---

[TestDisplay/schema_drift - 1]
Error: schema drift detected: expected hash abc, got xyz

Hint: the database schema was modified outside of migrations (manual DDL).
Run 'conduit diff' to generate a migration that captures the changes.
To skip this check: --skip-schema-drift-check

---
